cs21b062_lab11/y.output
Terminals unused in grammar

    CONTINUE


State 17 conflicts: 15 shift/reduce
State 18 conflicts: 5 shift/reduce
State 20 conflicts: 15 shift/reduce
State 21 conflicts: 15 shift/reduce
State 47 conflicts: 15 shift/reduce
State 91 conflicts: 1 reduce/reduce
State 133 conflicts: 15 shift/reduce
State 139 conflicts: 15 shift/reduce
State 145 conflicts: 15 shift/reduce


Grammar

    0 $accept: StatementList $end

    1 StatementList: DeclarationList StatementList
    2              | Statement SEMICOLON StatementList
    3              | IfStatement StatementList

    4 $@1: ε

    5 $@2: ε

    6 $@3: ε

    7 StatementList: WHILE LPAREN ComRelExp RPAREN LCURL begin dummyLabels $@1 StatementList RCURL $@2 $@3 StatementList
    8              | SwitchStatement StatementList
    9              | ε

   10 DeclarationList: Declaration DeclarationList
   11                | Declaration

   12 $@4: ε

   13 Declaration: LCURL $@4 DeclarationList RCURL
   14            | type variablelist SEMICOLON

   15 type: INT
   16     | DOUBLE
   17     | FLOAT
   18     | CHAR

   19 variablelist: IDENTIFIER COMMA variablelist
   20             | IDENTIFIER Bracket COMMA variablelist
   21             | IDENTIFIER EQ NUMBER
   22             | IDENTIFIER EQ CHARCONST
   23             | IDENTIFIER Bracket
   24             | IDENTIFIER EQ ConstIden COMMA variablelist
   25             | IDENTIFIER

   26 Bracket: LBRACK NUMBER RBRACK
   27        | LBRACK NUMBER RBRACK Bracket

   28 ConstIden: Val
   29          | IDENTIFIER

   30 $@5: ε

   31 $@6: ε

   32 SwitchStatement: SWITCH LPAREN CaseVal $@5 RPAREN LCURL CaseStatements RCURL $@6 StatementList

   33 $@7: ε

   34 $@8: ε

   35 CaseStatements: CASE CaseVal COLON dummyLabels $@7 StatementList BreakStmt $@8 CaseStatements
   36               | DEFAULT COLON StatementList
   37               | ε

   38 BreakStmt: BREAK SEMICOLON

   39 $@9: ε

   40 $@10: ε

   41 IfStatement: IF LPAREN ComRelExp RPAREN dummyLabels LCURL $@9 StatementList RCURL $@10 ElseStmt StatementList

   42 ElseStmt: ELSE LCURL StatementList RCURL
   43         | ELSE IfStatement
   44         | ε

   45 dummyLabels: ε

   46 begin: ε

   47 Statement: IDENTIFIER EQ Statement
   48          | Term

   49 ComRelExp: ComRelExp AND Relexp
   50          | ComRelExp OR Relexp
   51          | Relexp

   52 Relexp: Term LT Term
   53       | Term LTE Term
   54       | Term GT Term
   55       | Term GTE Term
   56       | Term EQ EQ Term
   57       | Term NOT EQ Term
   58       | LPAREN Relexp RPAREN
   59       | NOT Relexp
   60       | ε

   61 Term: Term ADD Factor
   62     | Term SUB Factor
   63     | Factor

   64 Factor: Factor MUL SIGNVal
   65       | Factor DIV SIGNVal
   66       | SIGNVal

   67 SIGNVal: ADD Val
   68        | SUB Val
   69        | Val

   70 CaseVal: IDENTIFIER
   71        | NUMBER

   72 Val: IDENTIFIER
   73    | NUMBER
   74    | PADD IDENTIFIER
   75    | PSUB IDENTIFIER
   76    | IDENTIFIER PADD
   77    | IDENTIFIER PSUB
   78    | LPAREN Term RPAREN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IF (258) 41
    ELSE (259) 42 43
    ADD (260) 61 67
    SUB (261) 62 68
    MUL (262) 64
    DIV (263) 65
    EQ (264) 21 22 24 47 56 57
    LT (265) 52
    LTE (266) 53
    GT (267) 54
    GTE (268) 55
    NOT (269) 57 59
    AND (270) 49
    OR (271) 50
    PADD (272) 74 76
    PSUB (273) 75 77
    LPAREN (274) 7 32 41 58 78
    RPAREN (275) 7 32 41 58 78
    LCURL (276) 7 13 32 41 42
    RCURL (277) 7 13 32 41 42
    SEMICOLON (278) 2 14 38
    WHILE (279) 7
    COLON (280) 35 36
    SWITCH (281) 32
    BREAK (282) 38
    CONTINUE (283)
    DEFAULT (284) 36
    CASE (285) 35
    COMMA (286) 19 20 24
    LBRACK (287) 26 27
    RBRACK (288) 26 27
    INT (289) 15
    DOUBLE (290) 16
    FLOAT (291) 17
    CHAR (292) 18
    CHARCONST <cval> (293) 22
    NUMBER <dval> (294) 21 26 27 71 73
    IDENTIFIER <addr> (295) 19 20 21 22 23 24 25 29 47 70 72 74 75 76 77


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    StatementList <addr> (42)
        on left: 1 2 3 7 8 9
        on right: 0 1 2 3 7 8 32 35 36 41 42
    $@1 (43)
        on left: 4
        on right: 7
    $@2 (44)
        on left: 5
        on right: 7
    $@3 (45)
        on left: 6
        on right: 7
    DeclarationList (46)
        on left: 10 11
        on right: 1 10 13
    Declaration <addr> (47)
        on left: 13 14
        on right: 10 11
    $@4 (48)
        on left: 12
        on right: 13
    type <addr> (49)
        on left: 15 16 17 18
        on right: 14
    variablelist <addr> (50)
        on left: 19 20 21 22 23 24 25
        on right: 14 19 20 24
    Bracket <addr> (51)
        on left: 26 27
        on right: 20 23 27
    ConstIden <addr> (52)
        on left: 28 29
        on right: 24
    SwitchStatement <addr> (53)
        on left: 32
        on right: 8
    $@5 (54)
        on left: 30
        on right: 32
    $@6 (55)
        on left: 31
        on right: 32
    CaseStatements <addr> (56)
        on left: 35 36 37
        on right: 32 35
    $@7 (57)
        on left: 33
        on right: 35
    $@8 (58)
        on left: 34
        on right: 35
    BreakStmt <addr> (59)
        on left: 38
        on right: 35
    IfStatement <addr> (60)
        on left: 41
        on right: 3 43
    $@9 (61)
        on left: 39
        on right: 41
    $@10 (62)
        on left: 40
        on right: 41
    ElseStmt <addr> (63)
        on left: 42 43 44
        on right: 41
    dummyLabels <lab> (64)
        on left: 45
        on right: 7 35 41
    begin <lab> (65)
        on left: 46
        on right: 7
    Statement <addr> (66)
        on left: 47 48
        on right: 2 47
    ComRelExp <addr> (67)
        on left: 49 50 51
        on right: 7 41 49 50
    Relexp <addr> (68)
        on left: 52 53 54 55 56 57 58 59 60
        on right: 49 50 51 58 59
    Term <addr> (69)
        on left: 61 62 63
        on right: 48 52 53 54 55 56 57 61 62 78
    Factor <addr> (70)
        on left: 64 65 66
        on right: 61 62 63 64 65
    SIGNVal <addr> (71)
        on left: 67 68 69
        on right: 64 65 66
    CaseVal <addCase> (72)
        on left: 70 71
        on right: 32 35
    Val <addr> (73)
        on left: 72 73 74 75 76 77 78
        on right: 28 67 68 69


State 0

    0 $accept: • StatementList $end

    IF          shift, and go to state 1
    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    LCURL       shift, and go to state 7
    WHILE       shift, and go to state 8
    SWITCH      shift, and go to state 9
    INT         shift, and go to state 10
    DOUBLE      shift, and go to state 11
    FLOAT       shift, and go to state 12
    CHAR        shift, and go to state 13
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 15

    $default  reduce using rule 9 (StatementList)

    StatementList    go to state 16
    DeclarationList  go to state 17
    Declaration      go to state 18
    type             go to state 19
    SwitchStatement  go to state 20
    IfStatement      go to state 21
    Statement        go to state 22
    Term             go to state 23
    Factor           go to state 24
    SIGNVal          go to state 25
    Val              go to state 26


State 1

   41 IfStatement: IF • LPAREN ComRelExp RPAREN dummyLabels LCURL $@9 StatementList RCURL $@10 ElseStmt StatementList

    LPAREN  shift, and go to state 27


State 2

   67 SIGNVal: ADD • Val

    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 28

    Val  go to state 29


State 3

   68 SIGNVal: SUB • Val

    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 28

    Val  go to state 30


State 4

   74 Val: PADD • IDENTIFIER

    IDENTIFIER  shift, and go to state 31


State 5

   75 Val: PSUB • IDENTIFIER

    IDENTIFIER  shift, and go to state 32


State 6

   78 Val: LPAREN • Term RPAREN

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 28

    Term     go to state 33
    Factor   go to state 24
    SIGNVal  go to state 25
    Val      go to state 26


State 7

   13 Declaration: LCURL • $@4 DeclarationList RCURL

    $default  reduce using rule 12 ($@4)

    $@4  go to state 34


State 8

    7 StatementList: WHILE • LPAREN ComRelExp RPAREN LCURL begin dummyLabels $@1 StatementList RCURL $@2 $@3 StatementList

    LPAREN  shift, and go to state 35


State 9

   32 SwitchStatement: SWITCH • LPAREN CaseVal $@5 RPAREN LCURL CaseStatements RCURL $@6 StatementList

    LPAREN  shift, and go to state 36


State 10

   15 type: INT •

    $default  reduce using rule 15 (type)


State 11

   16 type: DOUBLE •

    $default  reduce using rule 16 (type)


State 12

   17 type: FLOAT •

    $default  reduce using rule 17 (type)


State 13

   18 type: CHAR •

    $default  reduce using rule 18 (type)


State 14

   73 Val: NUMBER •

    $default  reduce using rule 73 (Val)


State 15

   47 Statement: IDENTIFIER • EQ Statement
   72 Val: IDENTIFIER •
   76    | IDENTIFIER • PADD
   77    | IDENTIFIER • PSUB

    EQ    shift, and go to state 37
    PADD  shift, and go to state 38
    PSUB  shift, and go to state 39

    $default  reduce using rule 72 (Val)


State 16

    0 $accept: StatementList • $end

    $end  shift, and go to state 40


State 17

    1 StatementList: DeclarationList • StatementList

    IF          shift, and go to state 1
    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    LCURL       shift, and go to state 7
    WHILE       shift, and go to state 8
    SWITCH      shift, and go to state 9
    INT         shift, and go to state 10
    DOUBLE      shift, and go to state 11
    FLOAT       shift, and go to state 12
    CHAR        shift, and go to state 13
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 15

    IF          [reduce using rule 9 (StatementList)]
    ADD         [reduce using rule 9 (StatementList)]
    SUB         [reduce using rule 9 (StatementList)]
    PADD        [reduce using rule 9 (StatementList)]
    PSUB        [reduce using rule 9 (StatementList)]
    LPAREN      [reduce using rule 9 (StatementList)]
    LCURL       [reduce using rule 9 (StatementList)]
    WHILE       [reduce using rule 9 (StatementList)]
    SWITCH      [reduce using rule 9 (StatementList)]
    INT         [reduce using rule 9 (StatementList)]
    DOUBLE      [reduce using rule 9 (StatementList)]
    FLOAT       [reduce using rule 9 (StatementList)]
    CHAR        [reduce using rule 9 (StatementList)]
    NUMBER      [reduce using rule 9 (StatementList)]
    IDENTIFIER  [reduce using rule 9 (StatementList)]
    $default    reduce using rule 9 (StatementList)

    StatementList    go to state 41
    DeclarationList  go to state 17
    Declaration      go to state 18
    type             go to state 19
    SwitchStatement  go to state 20
    IfStatement      go to state 21
    Statement        go to state 22
    Term             go to state 23
    Factor           go to state 24
    SIGNVal          go to state 25
    Val              go to state 26


State 18

   10 DeclarationList: Declaration • DeclarationList
   11                | Declaration •

    LCURL   shift, and go to state 7
    INT     shift, and go to state 10
    DOUBLE  shift, and go to state 11
    FLOAT   shift, and go to state 12
    CHAR    shift, and go to state 13

    LCURL     [reduce using rule 11 (DeclarationList)]
    INT       [reduce using rule 11 (DeclarationList)]
    DOUBLE    [reduce using rule 11 (DeclarationList)]
    FLOAT     [reduce using rule 11 (DeclarationList)]
    CHAR      [reduce using rule 11 (DeclarationList)]
    $default  reduce using rule 11 (DeclarationList)

    DeclarationList  go to state 42
    Declaration      go to state 18
    type             go to state 19


State 19

   14 Declaration: type • variablelist SEMICOLON

    IDENTIFIER  shift, and go to state 43

    variablelist  go to state 44


State 20

    8 StatementList: SwitchStatement • StatementList

    IF          shift, and go to state 1
    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    LCURL       shift, and go to state 7
    WHILE       shift, and go to state 8
    SWITCH      shift, and go to state 9
    INT         shift, and go to state 10
    DOUBLE      shift, and go to state 11
    FLOAT       shift, and go to state 12
    CHAR        shift, and go to state 13
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 15

    IF          [reduce using rule 9 (StatementList)]
    ADD         [reduce using rule 9 (StatementList)]
    SUB         [reduce using rule 9 (StatementList)]
    PADD        [reduce using rule 9 (StatementList)]
    PSUB        [reduce using rule 9 (StatementList)]
    LPAREN      [reduce using rule 9 (StatementList)]
    LCURL       [reduce using rule 9 (StatementList)]
    WHILE       [reduce using rule 9 (StatementList)]
    SWITCH      [reduce using rule 9 (StatementList)]
    INT         [reduce using rule 9 (StatementList)]
    DOUBLE      [reduce using rule 9 (StatementList)]
    FLOAT       [reduce using rule 9 (StatementList)]
    CHAR        [reduce using rule 9 (StatementList)]
    NUMBER      [reduce using rule 9 (StatementList)]
    IDENTIFIER  [reduce using rule 9 (StatementList)]
    $default    reduce using rule 9 (StatementList)

    StatementList    go to state 45
    DeclarationList  go to state 17
    Declaration      go to state 18
    type             go to state 19
    SwitchStatement  go to state 20
    IfStatement      go to state 21
    Statement        go to state 22
    Term             go to state 23
    Factor           go to state 24
    SIGNVal          go to state 25
    Val              go to state 26


State 21

    3 StatementList: IfStatement • StatementList

    IF          shift, and go to state 1
    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    LCURL       shift, and go to state 7
    WHILE       shift, and go to state 8
    SWITCH      shift, and go to state 9
    INT         shift, and go to state 10
    DOUBLE      shift, and go to state 11
    FLOAT       shift, and go to state 12
    CHAR        shift, and go to state 13
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 15

    IF          [reduce using rule 9 (StatementList)]
    ADD         [reduce using rule 9 (StatementList)]
    SUB         [reduce using rule 9 (StatementList)]
    PADD        [reduce using rule 9 (StatementList)]
    PSUB        [reduce using rule 9 (StatementList)]
    LPAREN      [reduce using rule 9 (StatementList)]
    LCURL       [reduce using rule 9 (StatementList)]
    WHILE       [reduce using rule 9 (StatementList)]
    SWITCH      [reduce using rule 9 (StatementList)]
    INT         [reduce using rule 9 (StatementList)]
    DOUBLE      [reduce using rule 9 (StatementList)]
    FLOAT       [reduce using rule 9 (StatementList)]
    CHAR        [reduce using rule 9 (StatementList)]
    NUMBER      [reduce using rule 9 (StatementList)]
    IDENTIFIER  [reduce using rule 9 (StatementList)]
    $default    reduce using rule 9 (StatementList)

    StatementList    go to state 46
    DeclarationList  go to state 17
    Declaration      go to state 18
    type             go to state 19
    SwitchStatement  go to state 20
    IfStatement      go to state 21
    Statement        go to state 22
    Term             go to state 23
    Factor           go to state 24
    SIGNVal          go to state 25
    Val              go to state 26


State 22

    2 StatementList: Statement • SEMICOLON StatementList

    SEMICOLON  shift, and go to state 47


State 23

   48 Statement: Term •
   61 Term: Term • ADD Factor
   62     | Term • SUB Factor

    ADD  shift, and go to state 48
    SUB  shift, and go to state 49

    $default  reduce using rule 48 (Statement)


State 24

   63 Term: Factor •
   64 Factor: Factor • MUL SIGNVal
   65       | Factor • DIV SIGNVal

    MUL  shift, and go to state 50
    DIV  shift, and go to state 51

    $default  reduce using rule 63 (Term)


State 25

   66 Factor: SIGNVal •

    $default  reduce using rule 66 (Factor)


State 26

   69 SIGNVal: Val •

    $default  reduce using rule 69 (SIGNVal)


State 27

   41 IfStatement: IF LPAREN • ComRelExp RPAREN dummyLabels LCURL $@9 StatementList RCURL $@10 ElseStmt StatementList

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    NOT         shift, and go to state 52
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 53
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 28

    $default  reduce using rule 60 (Relexp)

    ComRelExp  go to state 54
    Relexp     go to state 55
    Term       go to state 56
    Factor     go to state 24
    SIGNVal    go to state 25
    Val        go to state 26


State 28

   72 Val: IDENTIFIER •
   76    | IDENTIFIER • PADD
   77    | IDENTIFIER • PSUB

    PADD  shift, and go to state 38
    PSUB  shift, and go to state 39

    $default  reduce using rule 72 (Val)


State 29

   67 SIGNVal: ADD Val •

    $default  reduce using rule 67 (SIGNVal)


State 30

   68 SIGNVal: SUB Val •

    $default  reduce using rule 68 (SIGNVal)


State 31

   74 Val: PADD IDENTIFIER •

    $default  reduce using rule 74 (Val)


State 32

   75 Val: PSUB IDENTIFIER •

    $default  reduce using rule 75 (Val)


State 33

   61 Term: Term • ADD Factor
   62     | Term • SUB Factor
   78 Val: LPAREN Term • RPAREN

    ADD     shift, and go to state 48
    SUB     shift, and go to state 49
    RPAREN  shift, and go to state 57


State 34

   13 Declaration: LCURL $@4 • DeclarationList RCURL

    LCURL   shift, and go to state 7
    INT     shift, and go to state 10
    DOUBLE  shift, and go to state 11
    FLOAT   shift, and go to state 12
    CHAR    shift, and go to state 13

    DeclarationList  go to state 58
    Declaration      go to state 18
    type             go to state 19


State 35

    7 StatementList: WHILE LPAREN • ComRelExp RPAREN LCURL begin dummyLabels $@1 StatementList RCURL $@2 $@3 StatementList

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    NOT         shift, and go to state 52
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 53
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 28

    $default  reduce using rule 60 (Relexp)

    ComRelExp  go to state 59
    Relexp     go to state 55
    Term       go to state 56
    Factor     go to state 24
    SIGNVal    go to state 25
    Val        go to state 26


State 36

   32 SwitchStatement: SWITCH LPAREN • CaseVal $@5 RPAREN LCURL CaseStatements RCURL $@6 StatementList

    NUMBER      shift, and go to state 60
    IDENTIFIER  shift, and go to state 61

    CaseVal  go to state 62


State 37

   47 Statement: IDENTIFIER EQ • Statement

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 15

    Statement  go to state 63
    Term       go to state 23
    Factor     go to state 24
    SIGNVal    go to state 25
    Val        go to state 26


State 38

   76 Val: IDENTIFIER PADD •

    $default  reduce using rule 76 (Val)


State 39

   77 Val: IDENTIFIER PSUB •

    $default  reduce using rule 77 (Val)


State 40

    0 $accept: StatementList $end •

    $default  accept


State 41

    1 StatementList: DeclarationList StatementList •

    $default  reduce using rule 1 (StatementList)


State 42

   10 DeclarationList: Declaration DeclarationList •

    $default  reduce using rule 10 (DeclarationList)


State 43

   19 variablelist: IDENTIFIER • COMMA variablelist
   20             | IDENTIFIER • Bracket COMMA variablelist
   21             | IDENTIFIER • EQ NUMBER
   22             | IDENTIFIER • EQ CHARCONST
   23             | IDENTIFIER • Bracket
   24             | IDENTIFIER • EQ ConstIden COMMA variablelist
   25             | IDENTIFIER •

    EQ      shift, and go to state 64
    COMMA   shift, and go to state 65
    LBRACK  shift, and go to state 66

    $default  reduce using rule 25 (variablelist)

    Bracket  go to state 67


State 44

   14 Declaration: type variablelist • SEMICOLON

    SEMICOLON  shift, and go to state 68


State 45

    8 StatementList: SwitchStatement StatementList •

    $default  reduce using rule 8 (StatementList)


State 46

    3 StatementList: IfStatement StatementList •

    $default  reduce using rule 3 (StatementList)


State 47

    2 StatementList: Statement SEMICOLON • StatementList

    IF          shift, and go to state 1
    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    LCURL       shift, and go to state 7
    WHILE       shift, and go to state 8
    SWITCH      shift, and go to state 9
    INT         shift, and go to state 10
    DOUBLE      shift, and go to state 11
    FLOAT       shift, and go to state 12
    CHAR        shift, and go to state 13
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 15

    IF          [reduce using rule 9 (StatementList)]
    ADD         [reduce using rule 9 (StatementList)]
    SUB         [reduce using rule 9 (StatementList)]
    PADD        [reduce using rule 9 (StatementList)]
    PSUB        [reduce using rule 9 (StatementList)]
    LPAREN      [reduce using rule 9 (StatementList)]
    LCURL       [reduce using rule 9 (StatementList)]
    WHILE       [reduce using rule 9 (StatementList)]
    SWITCH      [reduce using rule 9 (StatementList)]
    INT         [reduce using rule 9 (StatementList)]
    DOUBLE      [reduce using rule 9 (StatementList)]
    FLOAT       [reduce using rule 9 (StatementList)]
    CHAR        [reduce using rule 9 (StatementList)]
    NUMBER      [reduce using rule 9 (StatementList)]
    IDENTIFIER  [reduce using rule 9 (StatementList)]
    $default    reduce using rule 9 (StatementList)

    StatementList    go to state 69
    DeclarationList  go to state 17
    Declaration      go to state 18
    type             go to state 19
    SwitchStatement  go to state 20
    IfStatement      go to state 21
    Statement        go to state 22
    Term             go to state 23
    Factor           go to state 24
    SIGNVal          go to state 25
    Val              go to state 26


State 48

   61 Term: Term ADD • Factor

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 28

    Factor   go to state 70
    SIGNVal  go to state 25
    Val      go to state 26


State 49

   62 Term: Term SUB • Factor

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 28

    Factor   go to state 71
    SIGNVal  go to state 25
    Val      go to state 26


State 50

   64 Factor: Factor MUL • SIGNVal

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 28

    SIGNVal  go to state 72
    Val      go to state 26


State 51

   65 Factor: Factor DIV • SIGNVal

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 28

    SIGNVal  go to state 73
    Val      go to state 26


State 52

   59 Relexp: NOT • Relexp

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    NOT         shift, and go to state 52
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 53
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 28

    $default  reduce using rule 60 (Relexp)

    Relexp   go to state 74
    Term     go to state 56
    Factor   go to state 24
    SIGNVal  go to state 25
    Val      go to state 26


State 53

   58 Relexp: LPAREN • Relexp RPAREN
   78 Val: LPAREN • Term RPAREN

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    NOT         shift, and go to state 52
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 53
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 28

    $default  reduce using rule 60 (Relexp)

    Relexp   go to state 75
    Term     go to state 76
    Factor   go to state 24
    SIGNVal  go to state 25
    Val      go to state 26


State 54

   41 IfStatement: IF LPAREN ComRelExp • RPAREN dummyLabels LCURL $@9 StatementList RCURL $@10 ElseStmt StatementList
   49 ComRelExp: ComRelExp • AND Relexp
   50          | ComRelExp • OR Relexp

    AND     shift, and go to state 77
    OR      shift, and go to state 78
    RPAREN  shift, and go to state 79


State 55

   51 ComRelExp: Relexp •

    $default  reduce using rule 51 (ComRelExp)


State 56

   52 Relexp: Term • LT Term
   53       | Term • LTE Term
   54       | Term • GT Term
   55       | Term • GTE Term
   56       | Term • EQ EQ Term
   57       | Term • NOT EQ Term
   61 Term: Term • ADD Factor
   62     | Term • SUB Factor

    ADD  shift, and go to state 48
    SUB  shift, and go to state 49
    EQ   shift, and go to state 80
    LT   shift, and go to state 81
    LTE  shift, and go to state 82
    GT   shift, and go to state 83
    GTE  shift, and go to state 84
    NOT  shift, and go to state 85


State 57

   78 Val: LPAREN Term RPAREN •

    $default  reduce using rule 78 (Val)


State 58

   13 Declaration: LCURL $@4 DeclarationList • RCURL

    RCURL  shift, and go to state 86


State 59

    7 StatementList: WHILE LPAREN ComRelExp • RPAREN LCURL begin dummyLabels $@1 StatementList RCURL $@2 $@3 StatementList
   49 ComRelExp: ComRelExp • AND Relexp
   50          | ComRelExp • OR Relexp

    AND     shift, and go to state 77
    OR      shift, and go to state 78
    RPAREN  shift, and go to state 87


State 60

   71 CaseVal: NUMBER •

    $default  reduce using rule 71 (CaseVal)


State 61

   70 CaseVal: IDENTIFIER •

    $default  reduce using rule 70 (CaseVal)


State 62

   32 SwitchStatement: SWITCH LPAREN CaseVal • $@5 RPAREN LCURL CaseStatements RCURL $@6 StatementList

    $default  reduce using rule 30 ($@5)

    $@5  go to state 88


State 63

   47 Statement: IDENTIFIER EQ Statement •

    $default  reduce using rule 47 (Statement)


State 64

   21 variablelist: IDENTIFIER EQ • NUMBER
   22             | IDENTIFIER EQ • CHARCONST
   24             | IDENTIFIER EQ • ConstIden COMMA variablelist

    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    CHARCONST   shift, and go to state 89
    NUMBER      shift, and go to state 90
    IDENTIFIER  shift, and go to state 91

    ConstIden  go to state 92
    Val        go to state 93


State 65

   19 variablelist: IDENTIFIER COMMA • variablelist

    IDENTIFIER  shift, and go to state 43

    variablelist  go to state 94


State 66

   26 Bracket: LBRACK • NUMBER RBRACK
   27        | LBRACK • NUMBER RBRACK Bracket

    NUMBER  shift, and go to state 95


State 67

   20 variablelist: IDENTIFIER Bracket • COMMA variablelist
   23             | IDENTIFIER Bracket •

    COMMA  shift, and go to state 96

    $default  reduce using rule 23 (variablelist)


State 68

   14 Declaration: type variablelist SEMICOLON •

    $default  reduce using rule 14 (Declaration)


State 69

    2 StatementList: Statement SEMICOLON StatementList •

    $default  reduce using rule 2 (StatementList)


State 70

   61 Term: Term ADD Factor •
   64 Factor: Factor • MUL SIGNVal
   65       | Factor • DIV SIGNVal

    MUL  shift, and go to state 50
    DIV  shift, and go to state 51

    $default  reduce using rule 61 (Term)


State 71

   62 Term: Term SUB Factor •
   64 Factor: Factor • MUL SIGNVal
   65       | Factor • DIV SIGNVal

    MUL  shift, and go to state 50
    DIV  shift, and go to state 51

    $default  reduce using rule 62 (Term)


State 72

   64 Factor: Factor MUL SIGNVal •

    $default  reduce using rule 64 (Factor)


State 73

   65 Factor: Factor DIV SIGNVal •

    $default  reduce using rule 65 (Factor)


State 74

   59 Relexp: NOT Relexp •

    $default  reduce using rule 59 (Relexp)


State 75

   58 Relexp: LPAREN Relexp • RPAREN

    RPAREN  shift, and go to state 97


State 76

   52 Relexp: Term • LT Term
   53       | Term • LTE Term
   54       | Term • GT Term
   55       | Term • GTE Term
   56       | Term • EQ EQ Term
   57       | Term • NOT EQ Term
   61 Term: Term • ADD Factor
   62     | Term • SUB Factor
   78 Val: LPAREN Term • RPAREN

    ADD     shift, and go to state 48
    SUB     shift, and go to state 49
    EQ      shift, and go to state 80
    LT      shift, and go to state 81
    LTE     shift, and go to state 82
    GT      shift, and go to state 83
    GTE     shift, and go to state 84
    NOT     shift, and go to state 85
    RPAREN  shift, and go to state 57


State 77

   49 ComRelExp: ComRelExp AND • Relexp

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    NOT         shift, and go to state 52
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 53
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 28

    $default  reduce using rule 60 (Relexp)

    Relexp   go to state 98
    Term     go to state 56
    Factor   go to state 24
    SIGNVal  go to state 25
    Val      go to state 26


State 78

   50 ComRelExp: ComRelExp OR • Relexp

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    NOT         shift, and go to state 52
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 53
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 28

    $default  reduce using rule 60 (Relexp)

    Relexp   go to state 99
    Term     go to state 56
    Factor   go to state 24
    SIGNVal  go to state 25
    Val      go to state 26


State 79

   41 IfStatement: IF LPAREN ComRelExp RPAREN • dummyLabels LCURL $@9 StatementList RCURL $@10 ElseStmt StatementList

    $default  reduce using rule 45 (dummyLabels)

    dummyLabels  go to state 100


State 80

   56 Relexp: Term EQ • EQ Term

    EQ  shift, and go to state 101


State 81

   52 Relexp: Term LT • Term

    ADD         shift, and go to state 2
    SUB         shift, and go to state 3
    PADD        shift, and go to state 4
    PSUB        shift, and go to state 5
    LPAREN      shift, and go to state 6
    NUMBER      shift, and go to state 14
    IDENTIFIER  shift, and go to state 28

    Term     go to state 102
    Factor   go to state 24
    SIGNVal  go to state 25
    Val      go to state 26


State 82

   53 Relexp: Term LTE • Term
